backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproject-ingress
  namespace: aaas-workshop  # Ensure it matches the namespace used for the backend and frontend services
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]'  # Add HTTPS listener
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:891612558678:certificate/fbfda0f1-7007-4235-93f3-5a88cf2843de
    alb.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: alb
  rules:
  - host: aaas-assignment.tdtlworld.com  # Your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-backend-service
            port:
              number: 8000  # Port for the backend (Django)
